--- a/src/views/templates/index.html
+++ b/src/views/templates/index.html
@@ -18,7 +18,14 @@
           <li class="row from">
             <select name="translate-from">
               {% for language in data.languages %}
-                <option>{{ language.name|upper }}</option>
+                <option 
+                value="{{ language.acronym }}" 
+                {% if language.acronym==data.translate_from %} 
+                  selected 
+                {% endif %}
+                >
+                  {{ language.name|upper }}
+                </option>
               {% endfor %}
             </select>
           </li>
@@ -28,7 +35,14 @@
           <li class="row to">
             <select name="translate-to">
               {% for language in data.languages %}
-                <option>{{ language.name|upper }}</option>
+                <option 
+                value="{{ language.acronym }}" 
+                {% if language.acronym==data.translate_to %} 
+                  selected 
+                {% endif %}
+                >
+                  {{ language.name|upper }}
+                </option>         
               {% endfor %}
             </select>
           </li>
